--- a/EXERCICIOS/cordel/index.html
+++ b/EXERCICIOS/cordel/index.html
@@ -92,11 +92,11 @@
     }
 
     div.paralax1 {
-      background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fplanetacampo.canalrural.com.br%2Fcolunistas%2Fcomo-os-escritorios-verdes-da-jbs-estao-ajudando-produtores-rurais-no-para-a-acessar-o-mercado-formal%2F&psig=AOvVaw3nSxe2zlgleBX7ke5lBH_d&ust=1761953488926000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCPCh07CKzZADFQAAAAAdAAAAABAE');
+      background-image: url('campo.jpeg');
     }
 
     div.paralax2 {
-      background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fblog.clubedeautores.com.br%2F2021%2F09%2Fquantas-paginas-tem-seu-livro.html&psig=AOvVaw3uFA4sha_aoslK4hXRI5Tp&ust=1761953536324000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCMiunMeKzZADFQAAAAAdAAAAABAE');
+      background-image: url('pages.jpg');
     }
 
     footer {
