--- a/Testes/index.html
+++ b/Testes/index.html
@@ -1,213 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal Ético</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Segoe UI', sans-serif;
-            background-color: #0f0f0f;
-            color: #fff;
-            display: flex;
-            height: 100vh;
-        }
-        .sidebar {
-            width: 250px;
-            background-color: #1a1a1a;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            padding: 15px 0;
-        }
-        .menu {
-            display: flex;
-            flex-direction: column;
-            padding: 20px 0;
-        }
-        .menu a {
-            padding: 10px 20px;
-            color: #ccc;
-            text-decoration: none;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-        .menu a:hover {
-            background-color: #262626;
-            color: #00ff88;
-        }
-        .bottom-section {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            border-top: 1px solid #333;
-            padding-top: 10px;
-        }
-        .visitor {
-            padding: 10px 20px;
-            color: #00ff88;
-            font-weight: bold;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-        .settings {
-            padding: 10px 20px;
-            color: #aaa;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-        .main {
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-        }
-        h1 {
-            font-size: 1.8rem;
-            margin-bottom: 10px;
-        }
-        input[type="text"] {
-            width: 60%;
-            padding: 10px;
-            border: none;
-            border-radius: 8px;
-            background-color: #1c1c1c;
-            color: #00ff88;
-            font-size: 1rem;
-            outline: none;
-        }
-        .message {
-            animation: fadeIn 0.6s ease-in-out;
-            background-color: #1c1c1c;
-            border-radius: 10px;
-            padding: 10px 15px;
-            margin: 10px 0;
-            width: fit-content;
-            max-width: 70%;
-            text-align: left;
-        }
-        .visitor-message {
-            align-self: flex-end;
-            background-color: #00ff88;
-            color: #000;
-        }
-        .bot-message {
-            align-self: flex-start;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(10px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-        .chat-box {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            background-color: #111;
-            border-radius: 12px;
-            padding: 15px;
-            width: 80%;
-            max-height: 70vh;
-            overflow-y: auto;
-        }
-    </style>
+    <title>Opções de teatro</title>
 </head>
 <body>
-    <div class="sidebar">
-        <div>
-            <div class="menu">
-                <a href="#"><span>🏠</span> Início</a>
-                <a href="#"><span>📚</span> Conteúdos</a>
-                <a href="#"><span>💡</span> Sobre Ética</a>
-            </div>
-        </div>
-        <div class="bottom-section">
-            <div class="visitor">👤 Visitante</div>
-            <div class="settings"><span>⚙️</span> Configurações</div>
-        </div>
+    <div class="container1">
+        <h1>Teatro<strong> B</strong></h1>
+        <h2>A ideia é a seguinte, vai tocar aquela música lá "Vieram três pra bater em um negro", ai conforme a musica toca os atores vão encenando </h2>
+        <div class="botao"><a href="tb.html">Clique aqui se gostou da ideia</a></div>
     </div>
+    <h1>Teatro<strong> C</strong></h1>
+    <h2>A ideia é ler uma carta e enquanto a carta está sendo lida os atores encenam</h2>
+     <div class="botao"><a href="tc.html">Clique aqui se gostou da ideia</a></div>
 
-    <div class="main">
-        <h1>Ei, visitante. Tudo pronto para começar?</h1>
-        <div class="chat-box" id="chatBox"></div>
-        <input type="text" id="questionInput" placeholder="Digite sua pergunta... (pressione Enter)">
-    </div>
 
-    <script>
-        const qaSequence = [
-            {
-                q: 'o que é ética',
-                a: `🤔 Ética é o conjunto de princípios e valores que orientam o comportamento humano, ajudando a diferenciar o que é certo e errado, justo e injusto.<br><br>💭 Em outras palavras: refletir sobre como devemos agir para viver bem em sociedade, respeitando os outros e nós mesmos.<br><br>📘 Exemplo:<br>✔️ É ético devolver um objeto perdido.<br>❌ Não é ético mentir para obter vantagem.<br><br>🌱 Na prática:<br>- Ética profissional<br>- Ética ambiental<br>- Ética social`
-            },
-            {
-                q: 'o que é saúde',
-                a: `💚 Saúde é o estado de completo bem-estar físico, mental e social, e não apenas a ausência de doenças (OMS).<br><br>🧠 Exemplo:<br>- Sem febre, mas com estresse? Saúde mental abalada.<br>- Ambiente sem saneamento? Saúde social comprometida.<br><br>💪 Tipos de saúde:<br>- Física<br>- Mental<br>- Social`
-            },
-            {
-                q: 'o que é ética na saúde',
-                a: `⚕️ Ética na saúde é o conjunto de princípios que garantem respeito, dignidade e bem-estar aos pacientes.<br><br>💬 Exemplos:<br>- Respeitar o paciente e preservar o sigilo.<br>- Não causar danos.<br>- Tratar todos com igualdade.<br>- Ser honesto.<br><br>✨ Importância:<br>Garante confiança, qualidade e respeito aos direitos humanos.`
-            },
-            {
-                q: 'quais os desafios da ética na saúde',
-                a: `🚧 Desafios da ética na saúde:<br><br>1️⃣ Preservar o sigilo e a privacidade.<br>2️⃣ Tratar todos com igualdade.<br>3️⃣ Tomar decisões difíceis.<br>4️⃣ Manter empatia e respeito.<br>5️⃣ Lidar com novas tecnologias.<br>6️⃣ Combater corrupção e interesses econômicos.<br><br>🧭 Resumo: manter respeito, igualdade e humanidade em meio a pressões e desigualdades.`
-            },
-            {
-                q: 'quais as vantagens da ética na saúde',
-                a: `🌟 Vantagens da ética na saúde:<br><br>1️⃣ Confiança entre paciente e profissional.<br>2️⃣ Atendimento mais humano.<br>3️⃣ Igualdade no tratamento.<br>4️⃣ Evita erros e injustiças.<br>5️⃣ Fortalece instituições.<br>6️⃣ Melhora o ambiente de trabalho.<br><br>💡 Resumo: ética traz confiança, respeito e qualidade.`
-            }
-        ];
-
-        const chatBox = document.getElementById('chatBox');
-        const input = document.getElementById('questionInput');
-        let currentStep = 0;
-
-        function addMessage(text, isVisitor = false) {
-            const msg = document.createElement('div');
-            msg.classList.add('message', isVisitor ? 'visitor-message' : 'bot-message');
-            msg.innerHTML = text;
-            chatBox.appendChild(msg);
-            chatBox.scrollTop = chatBox.scrollHeight;
-        }
-
-        function typeEffect(element, text, speed = 15) {
-            let i = 0;
-            const interval = setInterval(() => {
-                element.innerHTML = text.slice(0, i) + '|';
-                i++;
-                if (i > text.length) {
-                    clearInterval(interval);
-                    element.innerHTML = text;
-                }
-            }, speed);
-        }
-
-        function startSequence() {
-            if (currentStep >= qaSequence.length) return;
-            const { q, a } = qaSequence[currentStep];
-
-            addMessage(q, true);
-            setTimeout(() => {
-                const botMsg = document.createElement('div');
-                botMsg.classList.add('message', 'bot-message');
-                chatBox.appendChild(botMsg);
-                typeEffect(botMsg, a, 15);
-                chatBox.scrollTop = chatBox.scrollHeight;
-                currentStep++;
-                setTimeout(startSequence, 5000);
-            }, 1000);
-        }
-
-        input.addEventListener('keydown', (e) => {
-            if (e.key === 'Enter' && currentStep === 0) {
-                input.style.display = 'none';
-                startSequence();
-            }
-        });
-    </script>
 </body>
 </html>
