--- a/Testes/tb.html
+++ b/Testes/tb.html
@@ -1,99 +1,151 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teatro B</title>
+    <title>Teatro B — Resistência em Movimento</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: "Merriweather", serif;
+        }
+
+        body {
+            color: #f5f5f5;
+            background-color: #000;
+            background-image: url("https://images.unsplash.com/photo-1601121140916-d04e35ed84b4?auto=format&fit=crop&w=1400&q=80");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            min-height: 100vh;
+            padding: 60px 20px;
+        }
+
+        .conteudo {
+            background: rgba(0, 0, 0, 0.75);
+            padding: 40px 60px;
+            border-radius: 20px;
+            max-width: 900px;
+            text-align: justify;
+            line-height: 1.6;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
+        }
+
+        h1 {
+            text-align: center;
+            font-size: 2.5rem;
+            margin-bottom: 25px;
+            color: #ffcc00;
+        }
+
+        p {
+            margin-bottom: 20px;
+            font-size: 1.1rem;
+        }
+
+        strong {
+            color: #ffd700;
+        }
+
+        i {
+            color: #ccc;
+        }
+
+        footer {
+            background: #111;
+            padding: 15px;
+            text-align: center;
+            color: #777;
+            font-size: 0.9rem;
+            border-radius: 10px;
+            margin-top: 40px;
+            width: 100%;
+            max-width: 900px;
+        }
+
+        @media (max-width: 700px) {
+            .conteudo {
+                padding: 25px;
+                font-size: 1rem;
+            }
+
+            h1 {
+                font-size: 2rem;
+            }
+        }
+    </style>
 </head>
 <body>
-    <p><strong>
-        A letra da música "Vieram Três Pra Bater no Negro", de Tonho Matéria, é a seguinte:
-        
-        Vieram três pra bater no negro  
-        Vieram três pra bater no negro  
-        Trouxeram faca, porrete e facão  
-        Trouxeram faca, porrete e facão  
-        Você não sabe o que pode fazer o negro  
-        Você não sabe o que pode fazer o negro  
-        Troca as mãos pelos pés... Os pés pelas mãos  
-        Troca as mãos pelos pés  
-        Os pés pelas mãos  
-        Troca as mãos pelos pés  
-        Os pés pelas mãos  
-        Tapa na cara rasteira no chão  
-        Tapa na cara rasteira no chão  
-        Você não sabe o que pode fazer o negro  
-        Você não sabe o que pode fazer o negro...  
-        Troca as mãos pelos pés  
-        Os pés pelas mãos  
-        Troca as mãos pelos pés  
-        Os pés pelas mãos  
-        Troca as mãos pelos pés  
-        Os pés pelas mãos  
-        Troca as mãos pelos pés  
-        Os pés pelas mãos  
-        Mil novecentos e sessenta e três  
-        Mil novecentos e sessenta e três...  
-        Teve um barraco de arrepiar  
-        Teve um barraco de arrepiar  
-        A polícia quebrando o calcanhar  
-        A polícia quebrando o calcanhar  
-        Quero beber uma garrafa de cana para adormecer  
-        Quero beber uma garrafa de cana para adormecer  
-        Capoeira... De jogar capoeira pelo mundo  
-        E me espalhar pelo chão  
-        Capoeira dos bons amigos  
-        Capoeira do coração  
-        Capoeira pro resto do mundo  
-        Somos todos irmãos  
-        Capoeira  
-        Ô lelê  
-        Capoeira  
-        Ô lalá  
-        Capoeira  
-        Ô lelê  
-        Lelê lelê lelê lalá lala  
-        São quatro coisas desse mundo  
-        São quatro coisas desse mundo  
-        Que meu coração palpita  
-        É uma casa [?]  
-        É um cavalo relinchando  
-        É um menino chorando  
-        É uma mulher ciumenta  
-        Isso tudo eu dou um jeito.
-    </strong>
 
-</p>
-<p><i>Provavelmente não vai ser a música inteira, só o começo e meio</i></p>
-<p>A cena começa em silêncio. Um grupo de três personagens entra lentamente no centro da quadra, simulando os agressores. O “negro”, sozinho, está ajoelhado, de cabeça baixa. A música começa com um toque de tambor ou palmas marcadas, criando o ritmo da capoeira.
+    <div class="conteudo">
+        <h1>Teatro B — “Vieram Três Pra Bater no Negro”</h1>
+        <p><strong>A letra da música “Vieram Três Pra Bater no Negro”, de Tonho Matéria, é a seguinte:</strong></p>
+        <p>
+            Vieram três pra bater no negro  
+            Vieram três pra bater no negro  
+            Trouxeram faca, porrete e facão...  
+            <br><br>
+            <i>Provavelmente não vai ser a música inteira, só o começo e meio.</i>
+        </p>
 
-Execução Cênica:
-Enquanto a letra fala “Vieram três pra bater no negro”, os três cercam a vítima. Não há violência real — apenas movimentos coreografados, lentos e simbólicos, quase como uma dança.
-O “negro” reage com gestos de capoeira — esquivas, rasteiras, giros.
-O público entende, sem palavras, que ele está lutando não só contra os homens, mas contra a opressão.
+        <p>
+            A cena começa em silêncio. Um grupo de três personagens entra lentamente no centro da quadra, simulando os agressores.
+            O “negro”, sozinho, está ajoelhado, de cabeça baixa. A música começa com um toque de tambor ou palmas marcadas, criando o ritmo da capoeira.
+        </p>
 
-À medida que a música repete “Você não sabe o que pode fazer o negro”, o ator principal começa a virar o jogo. Ele levanta, encara os outros, e os movimentos ganham força — as mãos viram pés, os pés viram mãos. É a resistência pela agilidade, pela arte, pela inteligência.
+        <p>
+            <strong>Execução Cênica:</strong><br>
+            Enquanto a letra fala “Vieram três pra bater no negro”, os três cercam a vítima.  
+            Não há violência real — apenas movimentos coreografados, lentos e simbólicos, quase como uma dança.
+        </p>
 
-Quando a canção chega em “Mil novecentos e sessenta e três / Teve um barraco de arrepiar”, todos os atores congelam.
-O narrador entra em cena, andando entre eles.
+        <p>
+            O “negro” reage com gestos de capoeira — esquivas, rasteiras, giros.  
+            O público entende, sem palavras, que ele está lutando não só contra os homens, mas contra a opressão.
+        </p>
 
-Narrador (voz firme):
-“Em cada esquina, um corpo negro tombava.
-Mas o corpo que cai hoje... se levanta amanhã, dançando, lutando, cantando capoeira.”
+        <p>
+            À medida que a música repete “Você não sabe o que pode fazer o negro”, o ator principal começa a virar o jogo.
+            Ele levanta, encara os outros, e os movimentos ganham força — as mãos viram pés, os pés viram mãos.
+            É a resistência pela agilidade, pela arte, pela inteligência.
+        </p>
 
-A música continua.
-Agora, todos os atores se movem em roda, jogando capoeira — sem violência, só fluidez.
-No verso “Capoeira dos bons amigos, capoeira do coração”, eles param e se olham nos olhos, formando uma corrente humana.
+        <p>
+            Quando a canção chega em “Mil novecentos e sessenta e três / Teve um barraco de arrepiar”, todos os atores congelam.
+            O narrador entra em cena, andando entre eles.
+        </p>
 
-Narrador:
-“O que antes era arma virou arte.
-O que antes era dor virou cultura.
-E o que antes era medo... virou liberdade.”
+        <p><strong>Narrador (voz firme):</strong><br>
+        “Em cada esquina, um corpo negro tombava.<br>
+        Mas o corpo que cai hoje... se levanta amanhã, dançando, lutando, cantando capoeira.”</p>
 
-No final, todos gritam juntos, firmes:
-“Somos todos irmãos.”
+        <p>
+            A música continua.  
+            Agora, todos os atores se movem em roda, jogando capoeira — sem violência, só fluidez.
+        </p>
 
-(Silêncio total. Os atores saem devagar, olhando pro público.)</p>
+        <p>
+            No verso “Capoeira dos bons amigos, capoeira do coração”, eles param e se olham nos olhos, formando uma corrente humana.
+        </p>
+
+        <p><strong>Narrador:</strong><br>
+        “O que antes era arma virou arte.<br>
+        O que antes era dor virou cultura.<br>
+        E o que antes era medo... virou liberdade.”</p>
+
+        <p><strong>No final, todos gritam juntos:</strong><br>
+        “Somos todos irmãos.”<br><br>
+        <i>(Silêncio total. Os atores saem devagar, olhando pro público.)</i>
+        </p>
+    </div>
+
+    <footer>Trabalho de História — Consciência Negra • Teatro B</footer>
 
 </body>
 </html>
