--- a/Testes/index.html
+++ b/Testes/index.html
@@ -1,113 +1,151 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Opções de Teatro</title>
+    <title>Links</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: "Poppins", sans-serif;
-        }
+    /* =============================
+       VARIÁVEIS TEMA OPERA GX RED
+       ============================= */
+    :root{
+        --gx-bg-1: #000000;
+        --gx-bg-2: #0a0004;
+        --gx-glow: #ff0033;
+        --gx-glow-soft: #ff3355;
+        --texto: #e6e6e6;
+        --painel-bg: rgba(10, 0, 5, 0.55);
+        --borda: #ff0033;
+        --card-bg: rgba(255, 0, 51, 0.06);
+        --link: #ff0033;
+        --link-hover: #ffffff;
+    }
 
-        body {
-            background: linear-gradient(to right, #111, #222);
-            color: #f5f5f5;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            text-align: center;
-        }
+    /* =============================
+       FUNDO ESTILO OPERA GX
+       ============================= */
+    body{
+        margin: 0;
+        padding: 0;
+        font-family: "Orbitron", Arial, sans-serif;
+        color: var(--texto);
+        background:
+            radial-gradient(circle at 20% 20%, var(--gx-bg-2), var(--gx-bg-1)),
+            repeating-linear-gradient(135deg, #0a0004 0px, #000000 4px);
+        background-size: cover;
+    }
 
-        h1 {
-            font-size: 2.3rem;
-            margin-bottom: 10px;
-            color: #fff;
-        }
+    /* Efeito de linhas neon no fundo */
+    body::before{
+        content: "";
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: repeating-linear-gradient(
+            90deg,
+            transparent 0px,
+            transparent 47px,
+            rgba(255, 0, 51, 0.08) 50px
+        );
+        pointer-events: none;
+        z-index: -1;
+    }
 
-        h1 strong {
-            color: #ffcc00;
-        }
+    /* =============================
+       PAINEL CENTRAL
+       ============================= */
+    main{
+        max-width: 750px;
+        margin: 60px auto;
+        padding: 30px;
+        background: var(--painel-bg);
+        border: 2px solid var(--borda);
+        border-radius: 18px;
+        backdrop-filter: blur(12px);
+    }
 
-        h2 {
-            font-weight: 400;
-            color: #ccc;
-            max-width: 700px;
-            margin: 0 auto 20px;
-            line-height: 1.5;
-        }
+    header h1{
+        margin: 0 0 25px 0;
+        color: var(--gx-glow);
+        letter-spacing: 1px;
+    }
 
-        .container1, .container2 {
-            background: rgba(255, 255, 255, 0.05);
-            padding: 30px;
-            border-radius: 20px;
-            margin: 20px;
-            width: 90%;
-            max-width: 800px;
-            box-shadow: 0 0 15px rgba(255, 255, 255, 0.05);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
+    h2{
+        color: var(--gx-glow-soft);
+        margin-bottom: 25px;
+    }
 
-        .container1:hover, .container2:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 0 25px rgba(255, 204, 0, 0.2);
-        }
+    /* =============================
+       CARDS
+       ============================= */
+    .site, .canva{
+        padding: 18px;
+        margin: 18px 0;
+        border-radius: 14px;
+        border: 1px solid var(--borda);
+        background: var(--card-bg);
+        position: relative;
+        overflow: hidden;
+    }
 
-        .botao {
-            margin-top: 15px;
-        }
+    /* Glow lateral tipo GX */
+    .site::before, .canva::before{
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 4px;
+        height: 100%;
+        background: var(--gx-glow);
+        box-shadow: 0 0 10px var(--gx-glow);
+        opacity: 0.7;
+    }
 
-        .botao a {
-            text-decoration: none;
-            background: #ffcc00;
-            color: #111;
-            padding: 12px 25px;
-            border-radius: 25px;
-            font-weight: 600;
-            transition: all 0.3s ease;
-            display: inline-block;
-        }
+    p{
+        font-family: "Orbitron", Georgia, 'Times New Roman', Times, serif;
+        font-size: large;
+        margin-bottom: 12px;
+        color: #ffd7e0;
+    }
 
-        .botao a:hover {
-            background: #fff;
-            color: #000;
-            transform: scale(1.05);
-        }
+    /* =============================
+       LINKS ESTILO NEON RED
+       ============================= */
+    a{
+        text-decoration: none;
+        color: var(--link);
+        font-weight: bold;
+        font-size: 18px;
+        letter-spacing: 1px;
+        transition: 0.2s;
+    }
 
-        footer {
-            margin-top: 30px;
-            color: #777;
-            font-size: 0.9rem;
-        }
-
-        @media (max-width: 600px) {
-            h1 { font-size: 1.8rem; }
-            h2 { font-size: 1rem; }
-        }
-    </style>
+    a:hover{
+        color: var(--link-hover);
+        text-shadow: 0 0 8px var(--gx-glow);
+    }
+</style>
 </head>
 <body>
-    <div class="container1">
-        <h1>Teatro <strong>B</strong></h1>
-        <h2>
-            A ideia é a seguinte: vai tocar a música <em>"Vieram três pra bater em um negro"</em>,
-            e conforme ela toca, os atores encenam a história.
-        </h2>
-        <div class="botao"><a href="tb.html">Clique aqui se gostou da ideia</a></div>
-    </div>
+    <main>
+        <header>
+            <h1>Esse site foi feito pra abrigar os melhores <i>"projetos"</i> de Alfred</h1>
+        </header>
+        
+        <h2>Logo abaixo estão os links com descrição</h2>
 
-    <div class="container2">
-        <h1>Teatro <strong>C</strong></h1>
-        <h2>
-            A ideia é ler uma carta e, enquanto ela é narrada, os atores representam a cena ao vivo.
-        </h2>
-        <div class="botao"><a href="tc.html">Clique aqui se gostou da ideia</a></div>
-    </div>
+        <div class="site">
+            <p>Farmácia fictícia</p>
+            <a href="https://alfred-w-netizein.github.io/Farmacia-jayane/" target="_blank">Ver</a>
+        </div>
 
-    <footer>Trabalho de História — Consciência Negra</footer>
+        <div class="canva">
+            <p>Apresentação no Canva como se fosse uma conversa com o ChatGPT</p>
+            <a href="https://www.canva.com/design/DAG4bxuxXaQ/5UoZ0khiZ9UAFlYy-Ts5bg/edit?utm_content=DAG4bxuxXaQ&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Ver</a>
+        </div>
+
+    </main>
 </body>
 </html>
