novo projeto adicionado 22/11- 22:20

--- a/sla/cskjcds.html
+++ b/sla/cskjcds.html
@@ -1,36 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pioneiros</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <style>
+    body{}
 
-<!doctype html>
-<html dir="ltr" lang="pt">
-  <head>
-    <meta charset="utf-8">
-    <title>Nova guia</title>
-    <style>
-      body {
-        background: #3C3C3C;
-        margin: 0;
-      }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Pioneiros dos Desbravadores</h1>
+    <h2>Os líderes que moldaram o movimento no mundo, em nossa Divisão e em nosso país.</h2>
+  </header>
+  <article>
+    <section class="01">
+      <h2>POR QUE ESTUDAR OS PIONEIROS</h2>
+      <p>Os pioneiros dos Desbravadores foram responsáveis por estruturar o programa que conhecemos hoje: uniforme, filosofia, classes, acampamentos, hino, bandeira e a visão missionária.
+Conhecer sua história nos ajuda a entender por que o Clube existe e qual é nossa missão no mundo.</p>
+    </section>
+    <section class="02">
+      <h1>Pioneiros Mundiais</h1>
+           <h2>Lester Bond</h2>
+           <p>Secretário do Departamento de Jovens da Associação Geral. Foi quem conseguiu permissão para adaptar materiais dos escoteiros para os jovens adventistas, base para as primeiras Classes e conteúdos oficiais.</p>
 
-      #backgroundImage {
-        border: none;
-        height: 100%;
-        pointer-events: none;
-        position: fixed;
-        top: 0;
-        visibility: hidden;
-        width: 100%;
-      }
+           <h2>Theron Johnston</h2>
+           <p>Em 1930, criou um clube de meninos em casa, enquanto sua esposa dirigia um clube para meninas. É atribuído a ele o uso do nome Pathfinders. Realizava acampamentos, estudos da natureza e atividades práticas.</p>
 
-      [show-background-image] #backgroundImage {
-        visibility: visible;
-      }
-    </style>
-  </head>
-  <body>
-    <iframe id="backgroundImage" src=""></iframe>
-    <ntp-app></ntp-app>
-    <script type="module" src="new_tab_page.js"></script>
-    <link rel="stylesheet" href="chrome://resources/css/text_defaults_md.css">
-    <link rel="stylesheet" href="chrome://theme/colors.css?sets=ui,chrome">
-    <link rel="stylesheet" href="shared_vars.css">
-  </body>
+           <h2>Arthur Whitefield Spalding</h2>
+           <p>Fundou em 1919 o “Missionary Scout Club”. Ajudou a formular a Lei e o Voto dos Desbravadores (1922). Uma das figuras mais importantes na base teórica e espiritual do movimento.</p>
+
+           <h2>Henry Berg</h2>
+           <p>Diretor jovem que criou a bandeira dos Desbravadores (1948) e compôs o hino oficial (1952). Deu identidade visual e musical permanente ao programa.</p>
+
+    </section>
+
+    
+  </article>
+  
+</body>
 </html>
